<resources>
    <string name="app_name">OutfitZone</string>
    <string name="title_home">Home</string>
    <string name="title_search">Search</string>
    <string name="title_more">More</string>
    <string name="navigation_cart">Cart</string>
    <string name="navigation_card">Card</string>
    <string name="navigation_settings">Settings</string>
    <string name="navigation_orders">Orders</string>
    <string name="navigation_location">Address</string>
    <string name="welcome">Welcome!</string>
    <string name="login">Log in</string>
    <string name="register">Register</string>
    <string name="firstname">Firstname</string>
    <string name="lastname">Lastname</string>
    <string name="email">E-mail</string>
    <string name="password">Password</string>
    <string name="profile_picture">Profile picture</string>
    <string name="upload">Upload</string>
    <string name="only_strings">The field can only contain strings!</string>
    <string name="incorrect_email">The e-mail address you entered is incorrect!</string>
    <string name="password_weak">The password must be at least 6 characters long, and must contain a number!</string>
    <string name="empty_field">Field cannot be empty!</string>
    <string name="user_registered">A user with this e-mail is already registered!</string>
    <string name="bad_email">No user found with this e-mail address!</string>
    <string name="bad_password">Incorrect password!</string>
    <string name="bad_auth">Either the e-mail address or the password you provided is incorrect!</string>
    <string name="logout">Log out</string>
</resources>