<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/background_secondary">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintWidth_max="512dp"
            android:gravity="center"
            app:layout_constraintBottom_toTopOf="@+id/button_container_2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical"
                android:layout_marginBottom="16dp">

                <androidx.cardview.widget.CardView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    app:cardElevation="8dp"
                    app:cardCornerRadius="16dp">

                    <FrameLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">

                        <ImageView
                            android:id="@+id/logo"
                            android:layout_width="128dp"
                            android:layout_height="128dp"
                            android:scaleType="fitXY" />

                        <View
                            android:layout_width="128dp"
                            android:layout_height="128dp"
                            android:background="@drawable/image_border" />
                    </FrameLayout>

                </androidx.cardview.widget.CardView>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:orientation="vertical"
                android:padding="16dp"
                android:clipToPadding="false">

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="4dp"
                    android:text="@string/profile_picture" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/image_picker_button"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:background="@drawable/button_secondary"
                    android:text="@string/upload"
                    android:textColor="#000"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:clipToPadding="false"
                android:showDividers="middle">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/textView_2"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="4dp"
                        android:text="@string/firstname"
                        app:layout_constraintEnd_toStartOf="@+id/textView_3"
                        app:layout_constraintStart_toStartOf="parent"
                        android:layout_marginLeft="32dp"
                        app:layout_constraintBottom_toTopOf="@+id/name_input_container"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/textView_3"
                        android:layout_width="0dp"
                        android:layout_marginLeft="1dp"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="4dp"
                        android:text="@string/lastname"
                        app:layout_constraintBottom_toTopOf="@+id/name_input_container"
                        app:layout_constraintStart_toEndOf="@+id/textView_2"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:id="@+id/name_input_container"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="@+id/textView_3"
                        android:background="@drawable/background_textinput"
                        android:elevation="5dp"
                        android:layout_marginHorizontal="16dp">

                        <androidx.appcompat.widget.AppCompatEditText
                            android:id="@+id/first_name_text"
                            android:layout_width="0dp"
                            android:layout_height="48dp"
                            android:background="@android:color/transparent"
                            android:ems="10"
                            android:hint="@string/firstname"
                            android:inputType="textCapWords"
                            android:paddingHorizontal="16dp"
                            android:drawableStart="@drawable/ic_user"
                            android:drawablePadding="16dp"
                            android:drawableTint="@color/text_level_0"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toStartOf="@+id/name_divider"
                            app:layout_constraintStart_toStartOf="parent" />

                        <View
                            android:id="@+id/name_divider"
                            android:layout_width="1dp"
                            android:layout_height="48dp"
                            android:background="@color/border_input"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toStartOf="@+id/last_name_text"
                            app:layout_constraintStart_toEndOf="@+id/first_name_text" />

                        <androidx.appcompat.widget.AppCompatEditText
                            android:id="@+id/last_name_text"
                            android:layout_width="0dp"
                            android:layout_height="48dp"
                            android:background="@android:color/transparent"
                            android:ems="10"
                            android:hint="@string/lastname"
                            android:inputType="textCapWords"
                            android:paddingHorizontal="16dp"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toEndOf="@+id/name_divider" />

                    </androidx.constraintlayout.widget.ConstraintLayout>

                </androidx.constraintlayout.widget.ConstraintLayout>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingHorizontal="16dp"
                    android:paddingBottom="16dp"
                    android:clipToPadding="false">

                    <TextView
                        android:id="@+id/textView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/email"
                        android:layout_marginLeft="16dp"
                        app:layout_constraintBottom_toTopOf="@+id/email_text"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/email_text"
                        android:layout_width="match_parent"
                        android:layout_height="48dp"
                        android:layout_marginTop="4dp"
                        android:background="@drawable/background_textinput"
                        android:elevation="5dp"
                        android:ems="10"
                        android:hint="@string/email"
                        android:inputType="textEmailAddress"
                        android:paddingHorizontal="16dp"
                        android:drawablePadding="16dp"
                        android:drawableStart="@drawable/ic_email"
                        android:drawableTint="@color/text_level_0"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/textView" />

                </androidx.constraintlayout.widget.ConstraintLayout>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:clipToPadding="false"
                    android:paddingHorizontal="16dp"
                    android:paddingBottom="16dp">

                    <TextView
                        android:id="@+id/textView_1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/password"
                        android:layout_marginLeft="16dp"
                        app:layout_constraintBottom_toTopOf="@+id/password_text"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/password_text"
                        android:layout_width="match_parent"
                        android:layout_height="48dp"
                        android:layout_marginTop="4dp"
                        android:background="@drawable/background_textinput"
                        android:drawableStart="@drawable/ic_lock"
                        android:drawablePadding="16dp"
                        android:drawableTint="@color/text_level_0"
                        android:elevation="5dp"
                        android:ems="10"
                        android:hint="@string/password"
                        android:inputType="textPassword"
                        android:paddingHorizontal="16dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/textView_1" />

                </androidx.constraintlayout.widget.ConstraintLayout>

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/button_container_2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintWidth_max="512dp"
            android:gravity="center_horizontal">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/button2"
                    android:layout_width="match_parent"
                    android:layout_height="64dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginBottom="16dp"
                    android:background="@drawable/button_primary"
                    android:text="@string/register"
                    android:textColor="#FFF" />

                <ProgressBar
                    android:id="@+id/progressBar"
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:layout_gravity="center"
                    android:layout_marginBottom="8dp"
                    android:indeterminateTint="@color/white"
                    android:indeterminate="true"
                    android:visibility="invisible"
                    android:translationZ="10dp"/>

            </FrameLayout>

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>